--- a/src/index.yaml
+++ b/src/index.yaml
@@ -2,10 +2,16 @@ ProjectTitle: template
 
 PageList:
 - file: home-page.html
-  ready: 95%
+  ready: 100%
 
 - file: category-page.html
-  ready: 85%
+  ready: 100%
 
 - file: contacts-page.html
-  ready: 30%
+  ready: 100%
+
+- file: delivery-page.html
+  ready: 100%
+
+- file: payment-page.html
+  ready: 100%
