--- a/src/index.yaml
+++ b/src/index.yaml
@@ -51,3 +51,6 @@ PageList:
 
 - file: best-page.html
   ready: 100%
+
+- file: Pechat-Izgotovlenie-znachkov-zakatniye-znachki-brelki-magnity-fotomagnity.html
+  ready: 100%
