added all descr

--- a/src/index.yaml
+++ b/src/index.yaml
@@ -28,28 +28,28 @@ PageList:
 - file: news-page.html
   ready: 100%
 
-- file: machine-page.html
+- file: Vishevka-mashinnaya-shevronov-logotipov-uslugi-vishevki.html
   ready: 100%
 
-- file: pictures-page.html
+- file: Pechat-na-xolste-natyajka-kartin-na-podramniki-bagetnoye-oformlenie-fotografiy.html
   ready: 100%
 
-- file: clothes-page.html
+- file: Pechat-na-maykax-futbolkax-nanesenie-logotipov.html
   ready: 100%
 
-- file: balloons-page.html
+- file: Sharyki-s-geliyem-geleviye-vozdushniye-shary-s-doctavkoy.html
   ready: 100%
 
-- file: souvenirs-page.html
+- file: Pechat-korporativnyx-suvenirov-naneseniye-logotipov.html
   ready: 100%
 
-- file: photos-page.html
+- file: Pechat-fotoknig-izgotovlenie-fotoalbomov.html
   ready: 100%
 
-- file: presents-page.html
+- file: Podarki-blizkim-i-korporativniye-suveniry.html
   ready: 100%
 
-- file: best-page.html
+- file: Luchiye-predlojeniya-po-pechati-podarkov.html
   ready: 100%
 
 - file: Pechat-Izgotovlenie-znachkov-zakatniye-znachki-brelki-magnity-fotomagnity.html
